Fix 213799 again (kio doesn't notice changes in a symlink-to-a-directory) without introducing the 219547 crash in treeviews (due to KDirModel seeing unexpected resolved urls).

The new strategy is: rather than resolve the url right away (and emit wrong items),
we just store the "resolved_path -> known_path(s)" association in a QHash, and look that up
when we are notified of changes.

Fixed for: 4.4 RC1
BUG: 219547
CCBUG: 213799

svn path=/trunk/KDE/kdelibs/; revision=1064817